# solnest-revenue-manager

./: .gitignore  LICENSE  README.md  SETUP.md  build-pms-mcp.md  build-pricing-ops-mcp.md
mcp-servers/airroi/: .env.example  .gitignore  README.md  airroi_client.py  server.py  smoke_test.py
mcp-servers/hospitable/: .env.example  .gitignore  package-lock.json  package.json
mcp-servers/hospitable/src/: index.ts
mcp-servers/hospitable/src/services/: hospitable-client.ts
mcp-servers/hospitable/src/tools/: inquiries.ts  (+6 more)
mcp-servers/pricelabs/: .env.example  .gitignore  package-lock.json  package.json
mcp-servers/pricelabs/src/: index.ts
mcp-servers/rankbreeze/: .env.example  .gitignore  README.md  rankbreeze_client.py  server.py  session.txt.example  smoke_test.py
mcp-servers/turno/: .env.example  .gitignore  README.md  pyproject.toml
mcp-servers/turno/src/turno_mcp/: __init__.py  client.py  config.py  errors.py  safety.py  server.py
mcp-servers/turno/src/turno_mcp/tools/: __init__.py  _common.py  assignments.py  blocked_dates.py  bookings.py  checklists.py  cleaners.py  diagnostics.py  problems.py  projects.py  properties.py  reviews.py  webhooks.py
mcp-servers/turno/tests/: test_client.py  test_config.py  test_integration.py  test_safety.py  test_server.py
revenue-manager-plugin/: README.md
revenue-manager-plugin/.claude-plugin/: plugin.json
revenue-manager-plugin/migrations/: 001_revenue_tables.sql  002_outcome_columns.sql
revenue-manager-plugin/references/: hospitable.md  pricelabs.md
revenue-manager-plugin/skills/revenue-manager/: SKILL.md
(+9 files in other folders)
